--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <a href="/index.html" target="_self">
-      <img src="/images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
+      <img src="images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
       home page</a>
   </header>
 
@@ -30,7 +30,7 @@
   <div class="homeWindow">
     <h1>welcome! the fun has just begun</h1>
 
-    <img src="/images/pikachu.png" alt="pikachu" id="pikachu">
+    <img src="images/pikachu.png" alt="pikachu" id="pikachu">
     <br>
     <h2>Gotta catch 'em all. Think you can?</h2>
     <a href="/catch.html" target="_self">
