--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 
 <body>
   <header>
-    <a href="/index.html" target="_self">
+    <a href="index.html" target="_self">
       <img src="images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
       home page</a>
   </header>
 
   <nav class="navigation">
 
-    <a href="/my-pokemons.html" target="_self">my pokemons</a> &#124
-    <a href="/about-me.html" target="_self">about me</a> &#124
-    <a href="/contact.html" target="_self">contact</a>
+    <a href="my-pokemons.html" target="_self">my pokemons</a> &#124
+    <a href="about-me.html" target="_self">about me</a> &#124
+    <a href="contact.html" target="_self">contact</a>
 
 
   </nav>
@@ -33,7 +33,7 @@
     <img src="images/pikachu.png" alt="pikachu" id="pikachu">
     <br>
     <h2>Gotta catch 'em all. Think you can?</h2>
-    <a href="/catch.html" target="_self">
+    <a href="catch.html" target="_self">
       <button>start</button>
     </a>
   </div>
