--- a/catch.html
+++ b/catch.html
@@ -25,16 +25,16 @@
 
 <body onload="init()">
   <header>
-    <a href="/index.html" target="_self">
-      <img src="/images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
+    <a href="index.html" target="_self">
+      <img src="images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
     </a>
 
   </header>
   <div class="headLine">
     <h1>CATCH IT!</h1>
   </div>
-  <img onmouseover="move()" src="/images/ghost pokemon.jpeg" alt="GhostPokemon" id="image" />
-  <a href="/catch.html" target="_self" id="restart">
+  <img onmouseover="move()" src="images/ghost pokemon.jpeg" alt="GhostPokemon" id="image" />
+  <a href="catch.html" target="_self" id="restart">
     <button>restart</button>
   </a>
 </body>
