--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
 
 <body>
   <header>
-    <a href="/index.html" target="_self">
-      <img src="/images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
+    <a href="index.html" target="_self">
+      <img src="images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
     </a>
 
   </header>
