--- a/my-pokemons.html
+++ b/my-pokemons.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <a href="/index.html" target="_self">
-            <img src="/images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
+        <a href="index.html" target="_self">
+            <img src="images/pokemon logo.jpeg" alt="pokemonLogo" class="logo">
         </a>
 
     </header>
@@ -26,7 +26,7 @@
                 <h1>Pikachu</h1>
                 <h2>electric pokemon</h2>
             </div>
-            <img src="/images/pikachu pokemon.webp" width="100" height="200">
+            <img src="images/pikachu pokemon.webp" width="100" height="200">
             <p>abilities:
             <ul>
                 <li>electro ball</li>
@@ -45,7 +45,7 @@
                 <h1>Sandshrew</h1>
                 <h2>sand pokemon</h2>
             </div>
-            <img src="/images/sandshrew pokemon.jpeg" width="100" height="200">
+            <img src="images/sandshrew pokemon.jpeg" width="100" height="200">
             <p>abilities:
             <ul>
                 <li>sand storm</li>
@@ -64,7 +64,7 @@
                 <h1>Squirtal</h1>
                 <h2>water pokemon</h2>
             </div>
-            <img src="/images/squirtal pokemon.png" width="100" height="200">
+            <img src="images/squirtal pokemon.png" width="100" height="200">
             <p>abilities:
             <ul>
                 <li>furious slam</li>
@@ -84,7 +84,7 @@
                 <h1>Aligato</h1>
                 <h2>water pokemon</h2>
             </div>
-            <img src="/images/aligato.jpeg" width="100" height="200">
+            <img src="images/aligato.jpeg" width="100" height="200">
             <p>abilities:
             <ul>
                 <li>killer bite</li>
